--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "dotenv-safe": "^8.2.0",
     "framer-motion": "^3.10.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
